--- a/src/pages/md/1.md
+++ b/src/pages/md/1.md
@@ -1,66 +1,24 @@
-# Astro的安装及部署
+# 皮肤科医师
 
-## 准备工作
-<p>（1）在官网下载Node.js最新版，正常安装。<p>
-<p> (2)在终端中运行npm i-g nrm。 然后运行nrm tes t查看速度最快的镜像源，再使用nrm use xxx确认使用镜像源，以便加快速度使用。<p> 
-<p> (3)安装Vscode。 <p>
-<p> (4)安装终端。<p>
+## 1.任芳 
+<p>三甲 南京大学医学院附属金陵医院</p>
+
+#### 擅长方向
+<p>痤疮 荨麻疹 湿疹 尖锐湿疣 性病 梅毒 甲真菌病 毛囊炎 色素痣 丘疹性荨麻疹</p>
+
+#### 个人简介
+<p>周一到周五中午11：30-13：30，周三周四下午在线，南方医科大学博士擅长痤疮，色素痣，过敏，性病，尖锐湿疣梅毒
+</p>
 
 
-## 安装部署
+## 2.曾梅华
+#### 个人简介
+<p>南方医大博士。十余年三甲医院工作经验，擅长皮炎湿疹，荨麻疹，体股癣，儿童皮肤病，梅毒，淋病非淋，尖锐湿疣等常见皮肤病性病。</p>
 
+#### 擅长方向
+<p>足癣 痤疮 荨麻疹 湿疹 尖锐湿疣 甲真菌病 银屑病</p>
 
-### 1.全局安装
+#### 执业经历
+<p>011毕业后解放军南京总医院工作。南方医科大学博士，年门诊量八千余人次。熟练完成门诊手术激光等治疗。</p>
 
-<p>使用npm将Astro安装为全局命令。打开终端输入以下命令: <p>
-<p>bash<p>
-<p>npm install -g astro<p>
-
- ### 2.创建新项目
-
-初始化项目: 使用Astro创建一个新的项目，通过命令行 使用astro new命令来创建一个新的项目模板 。例如:
-<p>bash<p>
- <p>astro new my- astro-project<p>
-
-### 3.开始开发
-<p>进入项目目录:使用cd命令进入刚刚创建的项目目录。<p>
-<p>启动开发服务器:在项目目录中，运行npm run dev来启动开发服务器。这将启动一-个本地服务器，并在浏览器中打开网站。<p>
-
-### 4.初始化项目
-<p>bash<p>
-<p>astro new my- astro-project<p>
-
-## 发布到Github
-
-### 1.GitHub账号注册与登录
-<p>首先，需要到GitHub官网(https://github.com/)进行账号的注册.
-注册完成后,使用你的用户名和密码登录GitHub。<p>
-
-### 2.创建新的仓库
-<p>在GitHub首页的右上角，点击“+”号图标，从弹出的选择菜单中选择“新建仓库” ( New repository)。<p>
-<p>进入新建仓库界面后，填写仓库名称( Repository name)。<p>
- <p>选择仓库的可见性( Public或Private) 。<p>
-<p>填写仓库描述(可选)，然后点击“创建仓库”(Create repository)按钮。<p>
-
-### 3.上传文件
-创建完仓库后，你需要将你的网站文件上传到GitHub。
-
-### 4.启用GitHub Pages服务
-在GitHub仓库页面，点击“设置"按钮。在侧边栏中选择“Pages”选项，打开Pages配置界面。在"Source”(来源)选项中选择用于发布网站的分支，然后点击“保存”(Save)按钮。
-
-## 部署到Vercel
-### 1.登录Vercel:
-<p>使用GitHub账号登录Vercel。<p>
-
-### 2.选择新建项目:
-<p>在Verce1的界面中，选择“新建项目”(New Project) 。<p>
-
-### 3.导入GitHub项目:
-
-<p>在创建新项目的页面中，选择从Githb导入网站项目。 需要授权Vercel访问你的SitHub账号。<p>
-
-## 4.选择仓库和分支:
-<p>从列表中选择包含网站代码的GitHub仓库和分支。<p>
-
-### 5.开始部署
 
