--- a/src/pages/md/2.md
+++ b/src/pages/md/2.md
@@ -1,33 +1,16 @@
----
-title:'在astro中创建页面及导航'
-pubDate: 2024-06-13
-description: ' 在astro中创建页面及导航'
-author: 'Astro 学习者’
-image:
-     url: 'https://docs.astro.build/assets/full-logo-light.png'
-     alt: 'The full Astro logo.'
-tags: ["astro", "blogging" ，"learning in public"]
----
+ 口腔科医师
 
-# 在astro中创建页面及导航
+## 1.任芳 
+<p>三甲 南京大学医学院附属金陵医院</p>
 
-发表于: 2024- 06-13
+#### 擅长方向
+<p>痤疮 荨麻疹 湿疹 尖锐湿疣 性病 梅毒 甲真菌病 毛囊炎 色素痣 丘疹性荨麻疹</p>
 
-##创建'.astro'页面
+#### 个人简介
+<p>周一到周五中午11：30-13：30，周三周四下午在线，南方医科大学博士擅长痤疮，色素痣，过敏，性病，尖锐湿疣梅毒
+</p>
 
-在'pages'目录中，创建'astro' 页面。例如'about.astro'
-'.astro'文件与'.html'文件类似，可以在其中书写HTML、CsS以及JavaScript
 
-## 创建Markdown页面
-
-还可以使用Markdown来创建页面，如在'pages' 目录中，新建'md'文件夹，再在其中创建类似'1.md'的文件，内容按照Markdown格式文件书写即可
-
-## 创建导航链接
-
-在页面的而合适位置，使用a元素创建链接即可，例如: 
-'''
-        <a href="/">首页</a>
-		<a href="/About/">关于</a>
-		<a href="/blog/">博客</a>
-        <a href="/notes/">课程笔记</a>
-        ‘’‘
+## 2.曾梅华
+#### 个人简介
+<p>南方医大博士。十余年三甲医院工作经验，擅长皮炎湿疹，荨麻疹，体股癣，儿童皮肤病，梅毒，淋病非淋，尖锐湿疣等常见皮肤病性病。</p>
