--- a/src/pages/md/2.md
+++ b/src/pages/md/2.md
@@ -1,16 +1,22 @@
- 口腔科医师
+ # 口腔科医师
 
-## 1.任芳 
-<p>三甲 南京大学医学院附属金陵医院</p>
+## 1.吴玉杰
+#### 个人简介
+<p>毕业于武汉大学口腔医学院，牙体牙髓病学硕士研究生。 擅长显微根管治疗，树脂充填等技术，儿童牙病的诊断及治疗</p>
 
 #### 擅长方向
-<p>痤疮 荨麻疹 湿疹 尖锐湿疣 性病 梅毒 甲真菌病 毛囊炎 色素痣 丘疹性荨麻疹</p>
+<p>龋齿 牙髓炎 智齿冠周炎 牙周炎 牙龈炎 根尖周炎</p>
 
+#### 学术经历
+
+<p>武汉大学口腔医学院毕业,显微根管手术千余例；补牙数千例</p>
+
+## 2.苗群爱
 #### 个人简介
-<p>周一到周五中午11：30-13：30，周三周四下午在线，南方医科大学博士擅长痤疮，色素痣，过敏，性病，尖锐湿疣梅毒
-</p>
+<p>对口腔黏膜病（口腔溃疡、扁平苔藓、天疱疮等）的诊断处理。并擅长对牙周病、牙体牙髓及儿童牙病的诊治</p>
 
+#### 擅长方向
+<p>口腔溃疡 口腔扁平苔藓 口唇疱疹 牙龈炎 龋齿 智齿冠周炎</p>
 
-## 2.曾梅华
-#### 个人简介
-<p>南方医大博士。十余年三甲医院工作经验，擅长皮炎湿疹，荨麻疹，体股癣，儿童皮肤病，梅毒，淋病非淋，尖锐湿疣等常见皮肤病性病。</p>
+#### 学术经历
+<p>原西安医学院本科毕业，西安交通大学硕士毕业，在西安交通大学口腔医院工作38年。</p>
