--- a/src/pages/md/4.md
+++ b/src/pages/md/4.md
@@ -13,7 +13,7 @@
 
 ## 2.肖坤庭
 #### 个人简介
-<p>擅长于幽门螺杆菌感染、急诊胃肠炎、消化不良、反流性食管炎、慢性胃炎、消化性溃疡、便秘、消化道出血、肝功能不全等疾病诊治。/p>
+<p>擅长于幽门螺杆菌感染、急诊胃肠炎、消化不良、反流性食管炎、慢性胃炎、消化性溃疡、便秘、消化道出血、肝功能不全等疾病诊治。</p>
 
 #### 擅长方向
 <p>慢性胃炎 幽门螺杆菌感染 急性胃肠炎 胃溃疡 肝功能不全 便秘 腹痛 胃镜检查</p>
