--- a/src/pages/md/6.md
+++ b/src/pages/md/6.md
@@ -1,11 +1,9 @@
 # *午觉——真·「续命神器」*
 ### <p>那些有午睡习惯的人，可能工作效率更高。</p>
-  <p>2008 年，发表在《Behav Brain Res》的一篇研究对比了咖啡和午睡的提神醒脑作用，研究结果显示:相比咖啡组，午睡组的人，记忆能力改善更加明显；咖啡组的警觉性提升更加明显。在论文的最后，作者分析说，虽然咖啡组警觉性提高了，但这种提升并没有转化记忆能力和高级认知功能。
-<p>翻译一下就是，相比咖啡，午觉提升工作的效率效果可能更佳。有的人喝完咖啡后，只是觉得眼睛大大的也不困了，但是脑袋还是「一团浆糊」，看着对面的文件，还是它是它，你是你.</p>
+  <p>2008 年，发表在《Behav Brain Res》的一篇研究对比了咖啡和午睡的提神醒脑作用，研究结果显示:相比咖啡组，午睡组的人，记忆能力改善更加明显；咖啡组的警觉性提升更加明显。在论文的最后，作者分析说，虽然咖啡组警觉性提高了，但这种提升并没有转化记忆能力和高级认知功能。</p><p>翻译一下就是，相比咖啡，午觉提升工作的效率效果可能更佳。有的人喝完咖啡后，只是觉得眼睛大大的也不困了，但是脑袋还是「一团浆糊」，看着对面的文件，还是它是它，你是你.</p>
 
 ### 午睡，还能给喜欢熬夜的打工人第二次机会，弥补晚上的睡眠不足对身体的伤害！
-  <p>经常熬夜 （玩手机） 学习的小伙伴应该有体验，如果前一天晚上睡不好，第二天几乎就……废了!走路轻飘飘的、精神恍惚；领导跟你说话，像是听到了又像是没有；整个人的灵魂游离了。这简直太影响（给老板的印象）工作效率了。</p>
-<p>2021 年发布的一篇研究中发现：如果受试者晚上没睡好，他们身体里面的去甲肾上腺素水平增加了 2.5 倍；和免疫功能有关的白细胞介素 6 浓度也出现了变化。去甲肾上腺素是一种人体在应激状态下会释放的激素，让人心率增加、心跳加快、血压升高，睡眠不足的时候，你的身体会释放这种激素，稳定你身体内的神经内分泌水平。但是！如果没睡好第二天中午小睡一会儿的话，他们身体里的去甲肾上腺素水平就不会变化；白细胞介素 6 浓度也变得正常了。</p>
+  <p>经常熬夜 （玩手机） 学习的小伙伴应该有体验，如果前一天晚上睡不好，第二天几乎就……废了!走路轻飘飘的、精神恍惚；领导跟你说话，像是听到了又像是没有；整个人的灵魂游离了。这简直太影响（给老板的印象）工作效率了。</p><p>2021 年发布的一篇研究中发现：如果受试者晚上没睡好，他们身体里面的去甲肾上腺素水平增加了 2.5 倍；和免疫功能有关的白细胞介素 6 浓度也出现了变化。去甲肾上腺素是一种人体在应激状态下会释放的激素，让人心率增加、心跳加快、血压升高，睡眠不足的时候，你的身体会释放这种激素，稳定你身体内的神经内分泌水平。但是！如果没睡好第二天中午小睡一会儿的话，他们身体里的去甲肾上腺素水平就不会变化；白细胞介素 6 浓度也变得正常了。</p>
 
 ## 教你 3 招,让午睡更加高效
 
@@ -22,5 +20,5 @@
 
 
 
-                      <p>看到这里，你有没有想要打个哈欠的冲动 (~O~)……( - . - )🥱🥱🥱</p>
+                      看到这里，你有没有想要打个哈欠的冲动 (~O~)……( - . - )🥱🥱🥱
  
